# vggt4d-variants

./: .gitignore  README.md  __init__.py  demo_vggt4d.py  eval_mask.py  pyproject.toml  requirements.txt  setup.sh  vis_vggt4d.py
vggt4d/flash/: __init__.py  attention.py  block.py
vggt4d/layers/: attention.py  block.py
vggt4d/masks/: dynamic_mask.py  refine_dyn_mask.py
vggt4d/models/: aggregator.py  flash_aggregator.py  flash_vggt4d.py  vggt4d.py
vggt4d/utils/: eval_mask_utils.py  model_utils.py  store.py
vggt4d/visualization/: scene.py
vggt4d_multiview/: __init__.py
vggt4d_multiview/layers/: __init__.py
vggt4d_multiview/models/: __init__.py  aggregator_multiview.py  aggregator_multiview_flash.py  aggregator_multiview_omega.py  vggt4d_multiview.py  vggt4d_multiview_flash.py  vggt4d_multiview_omega.py
vggt4d_multiview/utils/: __init__.py
